<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textFilm1"
        android:theme="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/film1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/imageFilm1"
        app:layout_constraintTop_toTopOf="@+id/imageFilm1" />

    <ImageView
        android:id="@+id/imageFilm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/godfather_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/button_film2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="film2click"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilm2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilm2"
        app:layout_constraintTop_toBottomOf="@+id/textFilm2" />

    <TextView
        android:id="@+id/textFilm2"
        android:theme="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/film2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilm2"
        app:layout_constraintTop_toTopOf="@+id/imageFilm2" />

    <ImageView
        android:id="@+id/imageFilm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/shindler_4"
        app:layout_constraintBottom_toTopOf="@+id/imageFilm2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageFilm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/darkknight_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilm2"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textFilm3"
        android:theme="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/film3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilm3"
        app:layout_constraintTop_toTopOf="@+id/imageFilm3" />

    <Button
        android:id="@+id/button_film3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="film3click"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilm3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilm3"
        app:layout_constraintTop_toBottomOf="@+id/textFilm3" />

    <Button
        android:id="@+id/button_film1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="film1click"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilm1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilm1"
        app:layout_constraintTop_toBottomOf="@+id/textFilm1"
        app:layout_constraintVertical_bias="0.48" />

    <ImageButton
        android:id="@+id/button_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="inviteFriend"
        android:src="@drawable/ic_share_black_24dp"
        android:text="@string/invite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilm3"
        app:layout_constraintVertical_bias="0.541" />


</androidx.constraintlayout.widget.ConstraintLayout>